Fixed package.json naming restrictions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Custom Casper for javorszky.co.uk",
+    "name": "casper-javorszky.co.uk",
     "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive. Slightly modified for my needs",
     "demo": "https://demo.ghost.io",
     "version": "1.3.6",
